<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyFontStyle"
            android:text="@string/uid" />
		<EditText
            android:id="@+id/editTextUid15693"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyFontStyle"
            android:text="@string/startArr" />
		<EditText
            android:id="@+id/editTextStartArr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:ems="5" />
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyFontStyle"
            android:text="@string/blocks" />
		<EditText
            android:id="@+id/editTextBlocks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:focusable="false"
            android:ems="5" />
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyFontStyle"
            android:text="@string/readData" />
		<EditText
            android:id="@+id/editTextRead15693"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" />
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyFontStyle"
            android:text="@string/writeData" />
		<EditText
            android:id="@+id/editTextWrite15693"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00000000"
            android:ems="10" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <Button
                android:id="@+id/buttonFind15693"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/findcard" />

            <Button
                android:id="@+id/buttonSelect15693"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/selectCard" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <Button
                android:id="@+id/buttonRead15693"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/readData" />

            <Button
                android:id="@+id/buttonWrite15693"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/writeData" />

        </LinearLayout>

</LinearLayout>
